Most network/view creation work is now done via BioPAX reader. Right "results" panel works (shows the style's legend, node details, etc..)

--- a/src/main/resources/org/pathwaycommons/cypath2/internal/binary_legend.html
+++ b/src/main/resources/org/pathwaycommons/cypath2/internal/binary_legend.html
@@ -69,82 +69,6 @@
     </td>
  </tr>
 
-<!-- <tr> -->
-<!--     <td VALIGN=CENTER> -->
-<!--         <span class="rule">CO_CONTROL_DEPENDENT_ANTI</span> -->
-<!--     </td> -->
-<!--     <td BGCOLOR="#ff0000" VALIGN=CENTER> -->
-<!--         &nbsp; -->
-<!--     </td> -->
-<!-- </tr> -->
-<!-- <tr> -->
-<!--     <td> -->
-<!--         <span class='description'> -->
-<!--         Edge is drawn if the first and second entities have control over -->
-<!--         the same process, their control is dependent, i.e. one of them have effect over control -->
-<!--         of the other one, and their effect is in different directions (one of them activates, -->
-<!--         the other inhibits.  This interaction is undirected." -->
-<!--         </span> -->
-<!--     </td> -->
-<!--  </tr> -->
-
-<!-- <tr> -->
-<!--     <td VALIGN=CENTER> -->
-<!--         <span class="rule">CO_CONTROL_DEPENDENT_SIMILAR</span> -->
-<!--     </td> -->
-<!--     <td BGCOLOR="#00b050" VALIGN=CENTER> -->
-<!--         &nbsp; -->
-<!--     </td> -->
-<!-- </tr> -->
-<!-- <tr> -->
-<!--     <td> -->
-<!--         <span class='description'> -->
-<!--        Edge is drawn if the first and second entities have control over the -->
-<!--        same process, their control is dependent, i.e. one of them have effect over control of -->
-<!--        the other one, and their effect is in the same direction (both activates or both inhibits).  -->
-<!--        This interaction is undirected. -->
-<!--         </span> -->
-<!--     </td> -->
-<!--  </tr> -->
-
-<!-- <tr> -->
-<!--     <td VALIGN=CENTER> -->
-<!--         <span class="rule">CO_CONTROL_INDEPENDENT_ANTI</span> -->
-<!--     </td> -->
-<!--     <td BGCOLOR="#fd95a6" VALIGN=CENTER> -->
-<!--         &nbsp; -->
-<!--     </td> -->
-<!-- </tr> -->
-<!-- <tr> -->
-<!--     <td> -->
-<!--         <span class='description'> -->
-<!--         Edge is drawn if the first and second entities have control over the -->
-<!--         same process, their control is independent, i.e. they act without affecting each -->
-<!--         other's activity, and their effect is in different directions (one of them activates, -->
-<!--         the other inhibits.  This interaction is undirected. -->
-<!--         </span> -->
-<!--     </td> -->
-<!--  </tr> -->
-
-<!-- <tr> -->
-<!--     <td VALIGN=CENTER> -->
-<!--         <span class="rule">CO_CONTROL_INDEPENDENT_SIMILAR</span> -->
-<!--     </td> -->
-<!--     <td BGCOLOR="#92d050" VALIGN=CENTER> -->
-<!--         &nbsp; -->
-<!--     </td> -->
-<!-- </tr> -->
-<!-- <tr> -->
-<!--     <td> -->
-<!--         <span class='description'> -->
-<!--        Edge is drawn if the first and second entities have control over -->
-<!--        the same process, their control is independent, i.e. they act without affecting each -->
-<!--        other's activity, and their effect is in the same direction (both activates or both inhibits). -->
-<!--        This interaction is undirected. -->
-<!--         </span> -->
-<!--     </td> -->
-<!--  </tr> -->
-
 <tr>
     <td VALIGN=CENTER>
         <span class="rule">METABOLIC_CATALYSIS</span>
@@ -238,4 +162,24 @@
         </span>
     </td>
  </tr>
+ 
+<tr>
+    <td VALIGN=CENTER>
+        <span class="rule">GENERIC_OF</span>
+    </td>
+    <td BGCOLOR="#000000" VALIGN=CENTER>
+        &nbsp;
+    </td>
+</tr>
+<tr>
+    <td>
+        <span class='description'>
+       Edge is drawn if in the original model a molecule is a member of a generic group. 
+       In BioPAX L3, such groups can be defined in many ways using <em>EntityReference, Complex, 
+       PhysicalEntity (and their sub-classes)</em> and corresponding BioPAX properties:
+       <em>memberEntityReference, component, memberPhysicalEntity</em>
+	   This interaction is directed.
+        </span>
+    </td>
+ </tr> 
 </table>
