--- a/src/main/resources/org/pathwaycommons/cypath2/internal/legend.html
+++ b/src/main/resources/org/pathwaycommons/cypath2/internal/legend.html
@@ -2,12 +2,12 @@
 
 <table cellpadding="3" cellspacing="3">
 <tr bgcolor="#DDDDDD">
-    <td VALIGN=CENTER>
+    <th VALIGN=CENTER>
         <h3>Entity</h3>
-    </td>
-    <td VALIGN=CENTER>
+    </th>
+    <th VALIGN=CENTER>
         <h3>Visual Shape</h3>
-    </td>
+    </th>
 </tr>
 <tr>
     <td VALIGN=TOP>
