Fixed a deadlock that occurred during  initialization (on Ubuntu, Cy3 v 3.2.1 and 3.3.0); updated visual legends; some refactoring, polishing. TODO: move the cytopanel  (results panel), biopax tracker, and related stuff to the BioPAX reader core app, because that all depend on what the biopax reader does (convertion to SIF, arrtibutes, visual styles).

--- a/src/main/resources/org/pathwaycommons/cypath2/internal/binary_legend.html
+++ b/src/main/resources/org/pathwaycommons/cypath2/internal/binary_legend.html
@@ -1,228 +1,14 @@
+<h2>Visual Legend</h2>
+
 <table cellpadding="3" cellspacing="3" width="100%">
 <tr>
-    <th><h2>Visual Legend</h2></th>
+    <th>Types of Binary Relations</th>
     <td align='RIGHT'><a href="filter">Filter Edges</a></td>
 </tr>
 </table>
 
-<table cellpadding="3" cellspacing="3">
-<tr bgcolor="#DDDDDD">
-    <th VALIGN=CENTER>
-        <h3>Edge Type</h3>
-    </th>
-    <th VALIGN=CENTER>
-        <h3>Color</h3>
-    </th>
-</tr>
+<p>
+Current network was created from BioPAX pathway data reduced to the SIF format with Paxtools java library
+using all or some of the <a href="sif_relations">binary interaction types</a> (inference rules/patterns).
+</p>
 
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">IN_SAME_COMPONENT</span>
-    </td>
-    <td BGCOLOR="#ffff00" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-    <span class='description'>
-    Edge is drawn if the first entity is a component of the second entity, which is a complex.
-    This interaction is transient in the sense that A COMPONENT_OF B and B COMPONENT_OF
-    C implies A COMPONENT_OF C. This interaction is undirected.
-    </span>
-    </td>
- </tr>
-
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">COMPONENT_OF</span>
-    </td>
-    <td BGCOLOR="#ffc000" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-    <span class='description'>
-    Edge is drawn if two entities belong to at least one molecular complex.
-    This does not necessarily mean they interact directly. In a complex with n molecules, this rule
-    will create a clique composed of n(n-1)/2 interactions. This
-    interaction is directed.
-    </span>
-    </td>
- </tr>
-
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">CO_CONTROL</span>
-    </td>
-    <td BGCOLOR="#ff0000" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-        <span class='description'>
-        Edge is drawn if the first and second entities have control over
-        the same process. This interaction is undirected."
-        </span>
-    </td>
- </tr>
-
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">METABOLIC_CATALYSIS</span>
-    </td>
-    <td BGCOLOR="#00b0f0" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-        <span class='description'>
-        Edge is drawn if the first entity catalyses a reaction that either
-        consumes or produces the second entity. More specifically, this rule
-        will find an interaction between two entities A and B if and only
-        if A controls a conversion which B participates and appears only on
-        the left or right side of the conversion but not both.  This interaction is directed.
-        </span>
-    </td>
- </tr>
-
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">STATE_CHANGE</span>
-    </td>
-    <td BGCOLOR="#0070c0" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-        <span class='description'>
-       Edge is drawn if the first entity catalyses a reaction that either
-       consumes or produces the second entity. More specifically, this rule
-       will find an interaction between two entities A and B if and only
-       if A controls a conversion which B participates and appears both on
-       the left or right side of the conversion. This interaction is directed.
-        </span>
-    </td>
- </tr>
-
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">REACTS_WITH</span>
-    </td>
-    <td BGCOLOR="#ccc1da" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-        <span class='description'>
-        Edge is drawn if both A and B participates in a conversion as
-        substrates or products. Controllers are not included. This interaction is
-        undirected.
-        </span>
-    </td>
- </tr>
-
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">INTERACTS_WITH</span>
-    </td>
-    <td BGCOLOR="#7030a0" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-        <span class='description'>
-        Edge is drawn if both A and B participates in an interaction as
-        participants. Controllers are not included. This interaction is undirected.
-        </span>
-    </td>
- </tr>
-
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">SEQUENTIAL_CATALYSIS</span>
-    </td>
-    <td BGCOLOR="#7f7f7f" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-        <span class='description'>
-       Edge is drawn if A and B catalyzes two conversions that are connected
-       via a common molecule, and where potentially that common substrate
-       is produced by the former and consumed by the latter.
-       This interaction is directed.
-        </span>
-    </td>
- </tr>
- 
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">GENERIC_OF</span>
-    </td>
-    <td BGCOLOR="#000000" VALIGN=CENTER>
-        &nbsp;
-    </td>
-</tr>
-<tr>
-    <td>
-        <span class='description'>
-       Edge is drawn if in the original model a molecule is a member of a generic group. 
-       In BioPAX L3, such groups can be defined in many ways using <em>EntityReference, Complex, 
-       PhysicalEntity (and their sub-classes)</em> and corresponding BioPAX properties:
-       <em>memberEntityReference, component, memberPhysicalEntity</em>
-	   This interaction is directed.
-        </span>
-    </td>
- </tr> 
-</table>
-
-<table cellpadding="3" cellspacing="3">
-<tr bgcolor="#DDDDDD">
-    <th VALIGN=CENTER>
-        <h3>Node Type</h3>
-    </th>
-    <th VALIGN=CENTER>
-        <h3>Shape & Color</h3>
-    </th>   
-</tr>
-    
-<!-- TODO Describe Node Shapes (actually defined in the BioPAX core app!)-->
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">Entity References (e.g, ProteinReference)</span>
-    </td>
-    <td BGCOLOR="#FF9999" VALIGN=CENTER>ELLIPSE</td>    
-</tr>
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">Complex</span>
-    </td>
-    <td BGCOLOR="#99CCFF" VALIGN=CENTER>HEXAGON</td>    
-</tr>
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">GenericProteinReference</span>
-    </td>
-    <td BGCOLOR="#FF3300" VALIGN=CENTER>OCTAGON</td>    
-</tr>
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">GenericSmallMoleculeReference</span>
-    </td>
-    <td BGCOLOR="#CCCCFF" VALIGN=CENTER>OCTAGON</td>    
-</tr>
-<tr>
-    <td VALIGN=CENTER>
-        <span class="rule">Generic DNA/RNA References</span>
-    </td>
-    <td BGCOLOR="#33CCCC" VALIGN=CENTER>ROUND_RECTANGLE</td>    
-</tr>
-</table>
