--- a/src/main/resources/org/pathwaycommons/cypath2/internal/legend.html
+++ b/src/main/resources/org/pathwaycommons/cypath2/internal/legend.html
@@ -11,27 +11,23 @@
 </tr>
 <tr>
     <td VALIGN=TOP>
-        <FONT FACE="ARIAL">Physical Entities, such as proteins and
-            small molecules, except for complexes.</FONT>
+        Physical Entities, such as proteins and small molecules, except for complexes.
     </td>
     <td VALIGN=TOP>Ellipse</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">Complexes.</FONT>
-    </td>
+    <td VALIGN=TOP>Complexes</td>
     <td VALIGN=TOP>Diamond</td>
 </tr>
 <tr>
     <td VALIGN=TOP>
-        <FONT FACE="ARIAL">Interaction Entities, except controls, such as
-            biochemical reactions, etc.</FONT>
+        Interaction Entities, except controls, such as biochemical reactions, etc.
     </td>
     <td VALIGN=TOP>Square</td>
 </tr>
 <tr>
     <td VALIGN=TOP>
-        <FONT FACE="ARIAL">Control Interactions (catalyses, modulations, etc.)</FONT>
+        Control Interactions (catalyses, modulations, etc.)
     </td>
     <td VALIGN=TOP>Triangle</td>
 </tr>
@@ -45,21 +41,19 @@
 </tr>
 <tr>
     <td VALIGN=TOP>
-        <FONT FACE="ARIAL">Inhibition</FONT>
+        Inhibition
     </td>
     <td VALIGN=TOP>Black T-shape arrow</td>
 </tr>
 <tr>
     <td VALIGN=TOP>
-        <FONT FACE="ARIAL">Containment, e.g. a complex can
-            contain one or more proteins.</FONT>
+        Containment, e.g. a complex can contain one or more proteins.
     </td>
     <td VALIGN=TOP>Black circle arrow</td>
 </tr>
 <tr>
     <td VALIGN=TOP>
-        <FONT FACE="ARIAL">All other edge types, e.g. activation,
-            left, right, etc.</FONT>
+        All other edge types, e.g. activation, left, right, etc.
     </td>
     <td VALIGN=TOP>Black arrow</td>
 </tr>
@@ -70,18 +64,17 @@
 </tr>
 <tr>
     <td VALIGN=TOP colspan=2>
-        <FONT FACE="ARIAL">All physical entities will be labeled as follows:</FONT>
+        Physical entities may be labeled as follows:
     </td>
 </tr>
 <tr>
     <td VALIGN=TOP colspan=2>
-        <FONT FACE="ARIAL">[NAME] [-CHEMICAL MODIFICATION ABBR] [(CELLULAR LOCATION ABBR)]</FONT>
+        [NAME] [-CHEMICAL MODIFICATION ABBR] [(CELLULAR LOCATION ABBR)]
     </td>
 </tr>
 <tr>
     <td VALIGN=TOP colspan=2>
-        <FONT FACE="ARIAL">where [CHEMICAL MODIFICATION ABBR] and [CELLULAR LOCATION ABBR]
-            are one of the abbreviations described below.</FONT>
+       where [CHEMICAL MODIFICATION ABBR] and [CELLULAR LOCATION ABBR] are one of the abbreviations described below.
     </td>
 </tr>
 <tr bgcolor="#DDDDDD">
@@ -90,28 +83,16 @@
     </td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">MITF</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">MITF</FONT>
-    </td>
+    <td VALIGN=TOP>MITF</td>
+    <td VALIGN=TOP>MITF</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">MITF Phosphorylated</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">MITF-P</FONT>
-    </td>
+    <td VALIGN=TOP>MITF Phosphorylated</td>
+    <td VALIGN=TOP>MITF-P</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">MITF Phosphorylated, in the cytoplasm</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">MITF-P (CP)</FONT>
-    </td>
+    <td VALIGN=TOP>MITF Phosphorylated, in the cytoplasm</td>
+    <td VALIGN=TOP>MITF-P (CP)</td>
 </tr>
 <tr bgcolor="#DDDDDD">
     <td VALIGN=CENTER colspan=2>
@@ -119,60 +100,32 @@
     </td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">acetylated</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">A</FONT>
-    </td>
+    <td VALIGN=TOP>acetylated</td>
+    <td VALIGN=TOP>A</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">glycosylated</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">G</FONT>
-    </td>
+    <td VALIGN=TOP>glycosylated</td>
+    <td VALIGN=TOP>G</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">phosphorylated</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">P</FONT>
-    </td>
+    <td VALIGN=TOP>phosphorylated</td>
+    <td VALIGN=TOP>P</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">proteolytic cleavage</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">PCS</FONT>
-    </td>
+    <td VALIGN=TOP>proteolytic cleavage</td>
+    <td VALIGN=TOP>PCS</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">sumoylated</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">S</FONT>
-    </td>
+    <td VALIGN=TOP>sumoylated</td>
+    <td VALIGN=TOP>S</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">ubiquitinated</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">U</FONT>
-    </td>
+    <td VALIGN=TOP>ubiquitinated</td>
+    <td VALIGN=TOP>U</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">[All others]</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">No Abbreviation provided</FONT>
-    </td>
+    <td VALIGN=TOP>[All others]</td>
+    <td VALIGN=TOP>No Abbreviation provided</td>
 </tr>
 <tr bgcolor="#DDDDDD">
     <td VALIGN=CENTER COLSPAN=2>
@@ -180,107 +133,55 @@
     </td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">centrosome</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">CE</FONT>
-    </td>
+    <td VALIGN=TOP>centrosome</td>
+    <td VALIGN=TOP>CE</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">cytoplasm</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">CY</FONT>
-    </td>
+    <td VALIGN=TOP>cytoplasm</td>
+    <td VALIGN=TOP>CY</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">endoplasmic reticulum</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">ER</FONT>
-    </td>
+    <td VALIGN=TOP>endoplasmic reticulum</td>
+    <td VALIGN=TOP>ER</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">endosome</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">EN</FONT>
-    </td>
+    <td VALIGN=TOP>endosome</td>
+    <td VALIGN=TOP>EN</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">extracellular matrix</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">EM</FONT>
-    </td>
+    <td VALIGN=TOP>extracellular matrix</td>
+    <td VALIGN=TOP>EM</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">golgi apparatus</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">GA</FONT>
-    </td>
+    <td VALIGN=TOP>golgi apparatus</td>
+    <td VALIGN=TOP>GA</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">mitochondrion</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">MI</FONT>
-    </td>
+    <td VALIGN=TOP>mitochondrion</td>
+    <td VALIGN=TOP>MI</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">nucleoplasm</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">NP</FONT>
-    </td>
+    <td VALIGN=TOP>nucleoplasm</td>
+    <td VALIGN=TOP>NP</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">nucleus</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">NU</FONT>
-    </td>
+    <td VALIGN=TOP>nucleus</td>
+    <td VALIGN=TOP>NU</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">plasma membrane</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">PM</FONT>
-    </td>
+    <td VALIGN=TOP>plasma membrane</td>
+    <td VALIGN=TOP>PM</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">ribosome</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">RI</FONT>
-    </td>
+    <td VALIGN=TOP>ribosome</td>
+    <td VALIGN=TOP>RI</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">transmembrane</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">TM</FONT>
-    </td>
+    <td VALIGN=TOP>transmembrane</td>
+    <td VALIGN=TOP>TM</td>
 </tr>
 <tr>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">[All others]</FONT>
-    </td>
-    <td VALIGN=TOP>
-        <FONT FACE="ARIAL">No Abbreviation provided</FONT>
-    </td>
+    <td VALIGN=TOP>[All others]</td>
+    <td VALIGN=TOP>No Abbreviation provided</td>
 </tr>
 </table>
