Modified "Legend" component in the "Node summary" info panel - - filter edges now works for Hypergraph BioPAX vies as wee as SIF; - some text and code polishing.

--- a/src/main/resources/org/pathwaycommons/cypath2/internal/visual_legend.html
+++ b/src/main/resources/org/pathwaycommons/cypath2/internal/visual_legend.html
@@ -1,16 +1,12 @@
-<h2>Visual Legend</h2>
-
-<table cellpadding="3" cellspacing="3" width="100%">
-<tr>
-    <th>Types of Binary Relations</th>
-    <td align='RIGHT'><a href="filter">Filter Edges</a></td>
-</tr>
-</table>
+<h2>Pathway Commons App</h2>
 
 <p>
-Current network was created from BioPAX pathway data reduced to the SIF format with Paxtools java library
-using all or some of the <a href="http://www.pathwaycommons.org/pc2/formats#sif_relations">binary interaction types</a>.
-The SIF inference rules, starting from Cytoscape 3.3, have been much re-written and renamed
-compared with that in former versions
-(<a href="http://www.pathwaycommons.org/pc/sif_interaction_rules.do">old binary interaction types</a>).
+This network was created with Pathway Commons app and <a href="http://www.pathwaycommons.org/pc2/">web service</a>,
+which either directly mapped the <a href="http://www.biopax.org">BioPAX</a> result to Cytoscape (network, view, tables),
+or <a href="http://www.pathwaycommons.org/pc2/formats#sif_relations">binary interactions</a> were first inferred
+from the BioPAX model (with Paxtools pattern library) and then converted to SIF format, and to Cytoscape.
+</p>
+
+<p>
+    <a href="filter">Filter Edges</a>
 </p>
